# fy03_localization

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: fy03_localization.launch  imu_localization.launch  imu_position_estimation.launch  imu_test.launch  imu_viz.launch  localization_offline.launch  localization_online.launch  plot.launch  sensors.launch  test.launch  viz.launch
rviz/: fy03_localization.rviz  imu.rviz  imu_madgwick.rviz
scripts/: fake_imu_node.py  fusion_algorithm_class.py  fy03_localization_node.py  imu_localization.py  imu_localization_node.py  imu_position_estimation_node.py  localization_class.py  old_fusion_algorithm_class.py  plotter_node.py
src/fy03_localization/: Kalman Filter.py  Particle Filter.py  generate_inputs.py  kalman_filter.py  kalman_filter_good.py  localization.py  particle_filter.py  traj1.txt
